fixed nav, relative url

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <base href="/Project-Portfolio/" />
   <title>Contact</title>
-  <link rel="stylesheet" type="text/css" href="../styles.css" />
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <nav>
     <ul>
-      <li><a href="index.html" class="current">Home</a></li>
-      <li><a href="CV/index.html">CV</a></li>
-      <li><a href="projects/index.html">Projects</a></li>
-      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../CV/index.html">CV</a></li>
+      <li><a href="../projects/index.html">Projects</a></li>
+      <li><a href="../contact/index.html" class="current">Contact</a></li>
       <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
     </ul>
   </nav>
