--- a/CV/index.html
+++ b/CV/index.html
@@ -1,196 +1,198 @@
-<!DOCTYPE html>                                                                   
-<html lang="en">                                                                
-<head>                                                                           
-    <meta charset="UTF-8">
-    <base href="/Project-Portfolio/" />
-    <title>Austin's Personal Site</title>
-    <link rel="stylesheet" type="text/css" href="../styles.css" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>CV</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <main>                                                                         
+  <main>     
+
   <nav>
     <ul>
-      <li><a href="index.html" class="current">Home</a></li>
-      <li><a href="CV/index.html">CV</a></li>
-      <li><a href="projects/index.html">Projects</a></li>
-      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../CV/index.html"class="current">CV</a></li>
+      <li><a href="../projects/index.html" >Projects</a></li>
+      <li><a href="../contact/index.html">Contact</a></li>
       <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
     </ul>
   </nav>
-  <div class="resume">                                                          
-      <h1>Austin Wong</h1>                                                      
-        <p>My LinkedIn: </p>                                                     
-        <hr>                                                                   
+
+
+    <div class="resume">                                                          
+        <h1>Austin Wong</h1>                                                      
+          <p>My LinkedIn: </p>                                                     
+          <hr>                                                                   
+          <hr>
+          <h2>Summary</h2>                                                          
+          <p>Aspiring bioengineer and research assistant with diverse experience in computational modeling, biosensor development, and medical device simulation. Ability to lead projects and collaborate across lab and classroom settings. </p>
         <hr>
-        <h2>Summary</h2>                                                          
-        <p>Aspiring bioengineer and research assistant with diverse experience in computational modeling, biosensor development, and medical device simulation. Ability to lead projects and collaborate across lab and classroom settings. </p>
-      <hr>
 
-      <h2>Education</h2>
-        <div class="resume-line special-spacing">
-          <div class="column1">2023 – Present</div>
-          <div class="column2"><strong>University of California San Diego</strong>, Bachelors, Bioengineering</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1">2021 – 2023</div>
-          <div class="column2"><strong>San Jose State University</strong>, Bachelor's, Biomedical Engineering</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1">2018 – 2025</div>
-          <div class="column2"><strong>College of San Mateo, Skyline College, and Canada College</strong>, GE & Core courses</div>
-        </div>
-      <hr>
-
-      <h2>Technical Skills</h2>
-        <div class="resume-line">
-          <div class="column2"><strong>Computer-Aided Design Software:</strong></div>
-          <div class="column2"> Fusion 360, Solidworks, Onshape, Formlab, Kura</div>
-        </div>
-        <div class="resume-line">
-          <div class="column2"><strong>Programming Languages:</strong></div>
-          <div class="column2"> Java, JavaScript, Python, R (statistical programming), C++</div>
-        </div>
-        <div class="resume-line">
-          <div class="column2"><strong>Computer Software: </strong>:</div>
-          <div class="column2">Microsoft Office Suite, Google Suite, Adobe Creative Cloud, ImageJ</div>
-        </div>
-        <div style="margin-bottom: 30px;"></div>
-      <hr>
-
-      <h2>Work Experience</h2>
-
-        <div class="resume-line">
-          <div class="column1">2024 – Present</div>
-          <div class="column2"><strong>Aran Lab, University of California San Diego</strong></div>
-          <div class="role">Student Researcher</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; Conducted molecular biology research on CRISPR-Cas and microRNA mechanisms, contributing to novel biosensor development.</li>
-               <li>&#9830; Explored graphene and biomolecules to develop novel biosensing devices, advancing the field of disease detection and treatment.</li>
-            </ul>
+        <h2>Education</h2>
+          <div class="resume-line special-spacing">
+            <div class="column1">2023 – Present</div>
+            <div class="column2"><strong>University of California San Diego</strong>, Bachelors, Bioengineering</div>
           </div>
-        </div>
-
-        <div class="resume-line">
-          <div class="column1">Summer 2024</div>
-          <div class="column2"><strong>Conboy Lab, University of California Berkeley</strong></div>
-          <div class="role">Intern</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; Performed cell culturing of bone marrow stem cells, hybridoma cells, and other cell types.</li>
-               <li>&#9830; Conducted subcloning, performed immunostaining, and operated flow cytometry.</li>
-            </ul>
+          <div class="resume-line">
+            <div class="column1">2021 – 2023</div>
+            <div class="column2"><strong>San Jose State University</strong>, Bachelor's, Biomedical Engineering</div>
           </div>
-        </div>
-
-        <div class="resume-line">
-          <div class="column1">2021 – 2022</div>
-          <div class="column2"><strong>SJSU Animal Care – Team Govy BME Project</strong></div>
-          <div class="role">Researcher</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; Utilized SolidWorks to design the device, printed using Formlab, and cured the 3D print after it was resin printed.</li>
-               <li>&#9830; Designed prosthetic to repair the damaged beak area, supporting the lower beak and reducing shifting.</li>
-               <li>&#9830; Gained extensive wet lab experience in biology and chemistry labs.</li>
-            </ul>
+          <div class="resume-line">
+            <div class="column1">2018 – 2025</div>
+            <div class="column2"><strong>College of San Mateo, Skyline College, and Canada College</strong>, GE & Core courses</div>
           </div>
-        </div>
+        <hr>
 
-        <div class="resume-line">
-          <div class="column1">Summer 2021</div>
-          <div class="column2"><strong>Google, CSSI: Online</strong></div>
-          <div class="role">Participant</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; Project: Tic-Tac-Toe Combo</li>
-               <li>&#9830; Built using Node.js, ExpressJS, p5.js, and socket programming for multiplayer functionality.</li>
-            </ul>
+        <h2>Technical Skills</h2>
+          <div class="resume-line">
+            <div class="column2"><strong>Computer-Aided Design Software:</strong></div>
+            <div class="column2"> Fusion 360, Solidworks, Onshape, Formlab, Kura</div>
           </div>
-        </div>
-
-        <div class="resume-line">
-          <div class="column1">2022 – 2023</div>
-          <div class="column2"><strong>San Mateo County Libraries – Big Lift Program</strong></div>
-          <div class="role">STEM Activity Leader</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; Led daily STEM enrichment activities for K–1 students, encouraging curiosity and literacy.</li>
-               <li>&#9830; Created an open-ended environment promoting child-directed projects and creative problem-solving.</li>
-            </ul>
+          <div class="resume-line">
+            <div class="column2"><strong>Programming Languages:</strong></div>
+            <div class="column2"> Java, JavaScript, Python, R (statistical programming), C++</div>
           </div>
-        </div>
-
-        <div class="resume-line">
-          <div class="column1">2022 – 2023</div>
-          <div class="column2"><strong>Peer Connections at San Jose State University</strong></div>
-          <div class="role">Advanced Tutor</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; CRLA Level 1 & 2 Certified Tutor</li>
-            </ul>
+          <div class="resume-line">
+            <div class="column2"><strong>Computer Software: </strong>:</div>
+            <div class="column2">Microsoft Office Suite, Google Suite, Adobe Creative Cloud, ImageJ</div>
           </div>
-        </div>
+          <div style="margin-bottom: 30px;"></div>
+        <hr>
 
-        <div class="resume-line">
-          <div class="column1">Spring 2022</div>
-          <div class="column2"><strong>SJSU Accessible Education Center</strong></div>
-          <div class="role">Student Assistant</div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-               <li>&#9830; Provided front-desk support, assisting students, staff, and visitors.</li>
-               <li>&#9830; Managed confidential accommodation records and maintained digital files under FERPA compliance.</li>
-               <li>&#9830; Proctored exams and supported assistive services like scribing and reading support.</li>
-               <li>&#9830; Helped with tech tasks including printer troubleshooting, document scanning, and accessibility tool setup.</li>
-            </ul>
+        <h2>Work Experience</h2>
+
+          <div class="resume-line">
+            <div class="column1">2024 – Present</div>
+            <div class="column2"><strong>Aran Lab, University of California San Diego</strong></div>
+            <div class="role">Student Researcher</div>
           </div>
-        </div>
-
-
-      <h2>Projects</h2>
-        <div class="resume-line special-spacing">
-          <div class="column1">2023 – Present</div>
-          <div class="column2"><strong>Java Self-Projects</strong></div>
-        </div>
-        <div class="resume-line">
-          <div class="column1"></div>
-          <div class="column2">
-            <ul class="no-style">
-              <li style="text-indent: -1em; padding-left: 1em; margin-bottom: 5px;">&#9830; These are some of Java projects that I completed on my own. The projects cover a variety of topics, including basic input/output, data manipulation, and object-oriented programming.</li>
-              <li style="text-indent: -1em; padding-left: 1em; margin-left: 20px; margin-bottom: 5px;">&#9830; Calculate Coin Value: This project calculates the value of a set of coins in dollars and cents.</li>
-              <li style="text-indent: -1em; padding-left: 1em; margin-left: 20px; margin-bottom: 5px;">&#9830; Clothing Advice Based on Weather: This project recommends clothing based on the current weather conditions.</li>
-              <li style="text-indent: -1em; padding-left: 1em; margin-left: 20px;">&#9830; Generate Username: This project generates a username based on the user's first and last name.</li>
-            </ul>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; Conducted molecular biology research on CRISPR-Cas and microRNA mechanisms, contributing to novel biosensor development.</li>
+                <li>&#9830; Explored graphene and biomolecules to develop novel biosensing devices, advancing the field of disease detection and treatment.</li>
+              </ul>
+            </div>
           </div>
-          <div class="role"></div>
-        </div>
-        <div class="resume-line">
-          <div class="column1">2023</div>
-          <div class="column2"><strong>Glucose Monitor Static Analysis</strong></div>
-          <div class="role">Project Lead</div>
-        </div>
 
-    </div>
+          <div class="resume-line">
+            <div class="column1">Summer 2024</div>
+            <div class="column2"><strong>Conboy Lab, University of California Berkeley</strong></div>
+            <div class="role">Intern</div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; Performed cell culturing of bone marrow stem cells, hybridoma cells, and other cell types.</li>
+                <li>&#9830; Conducted subcloning, performed immunostaining, and operated flow cytometry.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-line">
+            <div class="column1">2021 – 2022</div>
+            <div class="column2"><strong>SJSU Animal Care – Team Govy BME Project</strong></div>
+            <div class="role">Researcher</div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; Utilized SolidWorks to design the device, printed using Formlab, and cured the 3D print after it was resin printed.</li>
+                <li>&#9830; Designed prosthetic to repair the damaged beak area, supporting the lower beak and reducing shifting.</li>
+                <li>&#9830; Gained extensive wet lab experience in biology and chemistry labs.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-line">
+            <div class="column1">Summer 2021</div>
+            <div class="column2"><strong>Google, CSSI: Online</strong></div>
+            <div class="role">Participant</div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; Project: Tic-Tac-Toe Combo</li>
+                <li>&#9830; Built using Node.js, ExpressJS, p5.js, and socket programming for multiplayer functionality.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-line">
+            <div class="column1">2022 – 2023</div>
+            <div class="column2"><strong>San Mateo County Libraries – Big Lift Program</strong></div>
+            <div class="role">STEM Activity Leader</div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; Led daily STEM enrichment activities for K–1 students, encouraging curiosity and literacy.</li>
+                <li>&#9830; Created an open-ended environment promoting child-directed projects and creative problem-solving.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-line">
+            <div class="column1">2022 – 2023</div>
+            <div class="column2"><strong>Peer Connections at San Jose State University</strong></div>
+            <div class="role">Advanced Tutor</div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; CRLA Level 1 & 2 Certified Tutor</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-line">
+            <div class="column1">Spring 2022</div>
+            <div class="column2"><strong>SJSU Accessible Education Center</strong></div>
+            <div class="role">Student Assistant</div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li>&#9830; Provided front-desk support, assisting students, staff, and visitors.</li>
+                <li>&#9830; Managed confidential accommodation records and maintained digital files under FERPA compliance.</li>
+                <li>&#9830; Proctored exams and supported assistive services like scribing and reading support.</li>
+                <li>&#9830; Helped with tech tasks including printer troubleshooting, document scanning, and accessibility tool setup.</li>
+              </ul>
+            </div>
+          </div>
+
+
+        <h2>Projects</h2>
+          <div class="resume-line special-spacing">
+            <div class="column1">2023 – Present</div>
+            <div class="column2"><strong>Java Self-Projects</strong></div>
+          </div>
+          <div class="resume-line">
+            <div class="column1"></div>
+            <div class="column2">
+              <ul class="no-style">
+                <li style="text-indent: -1em; padding-left: 1em; margin-bottom: 5px;">&#9830; These are some of Java projects that I completed on my own. The projects cover a variety of topics, including basic input/output, data manipulation, and object-oriented programming.</li>
+                <li style="text-indent: -1em; padding-left: 1em; margin-left: 20px; margin-bottom: 5px;">&#9830; Calculate Coin Value: This project calculates the value of a set of coins in dollars and cents.</li>
+                <li style="text-indent: -1em; padding-left: 1em; margin-left: 20px; margin-bottom: 5px;">&#9830; Clothing Advice Based on Weather: This project recommends clothing based on the current weather conditions.</li>
+                <li style="text-indent: -1em; padding-left: 1em; margin-left: 20px;">&#9830; Generate Username: This project generates a username based on the user's first and last name.</li>
+              </ul>
+            </div>
+            <div class="role"></div>
+          </div>
+          <div class="resume-line">
+            <div class="column1">2023</div>
+            <div class="column2"><strong>Glucose Monitor Static Analysis</strong></div>
+            <div class="role">Project Lead</div>
+          </div>
+
+      </div>
     </main>  
 </body>
 </html>
