--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <base href="/Project-Portfolio/" />
   <title>Austin: Personal site and portfolio</title>
-  <link rel="stylesheet" type="text/css" href="/tyles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Austin's Personal Site and Portfolio</h1>
