started using js and make nav automatic and added dark and light theme and updated the contact page with js

--- a/CV/index.html
+++ b/CV/index.html
@@ -6,18 +6,11 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+  <!-- Load JS -->
+  <script type="module" src="../global.js"></script>
+
   <main>     
-
-  <nav>
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../CV/index.html"class="current">CV</a></li>
-      <li><a href="../projects/index.html" >Projects</a></li>
-      <li><a href="../contact/index.html">Contact</a></li>
-      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
-    </ul>
-  </nav>
-
+    
 
     <div class="resume">                                                          
         <h1>Austin Wong</h1>                                                      
@@ -108,21 +101,6 @@
           </div>
 
           <div class="resume-line">
-            <div class="column1">Summer 2021</div>
-            <div class="column2"><strong>Google, CSSI: Online</strong></div>
-            <div class="role">Participant</div>
-          </div>
-          <div class="resume-line">
-            <div class="column1"></div>
-            <div class="column2">
-              <ul class="no-style">
-                <li>&#9830; Project: Tic-Tac-Toe Combo</li>
-                <li>&#9830; Built using Node.js, ExpressJS, p5.js, and socket programming for multiplayer functionality.</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="resume-line">
             <div class="column1">2022 – 2023</div>
             <div class="column2"><strong>San Mateo County Libraries – Big Lift Program</strong></div>
             <div class="role">STEM Activity Leader</div>
@@ -168,6 +146,22 @@
             </div>
           </div>
 
+
+          <div class="resume-line">
+            <div class="column1">Summer 2021</div>
+            <div class="column2"><strong>Google, CSSI: Online</strong></div>
+            <div class="role">Participant</div>
+            </div>
+            <div class="resume-line">
+              <div class="column1"></div>
+              <div class="column2">
+                <ul class="no-style">
+                  <li>&#9830; Project: Tic-Tac-Toe Combo</li>
+                  <li>&#9830; Built using Node.js, ExpressJS, p5.js, and socket programming for multiplayer functionality.</li>
+                </ul>
+            </div>
+          </div>
+        <hr>
 
         <h2>Projects</h2>
           <div class="resume-line special-spacing">
