--- a/index.html
+++ b/index.html
@@ -7,17 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Load JS -->
+  <script type="module" src="global.js"></script>
+  
   <h1>Austin's Personal Site and Portfolio</h1>
-
-  <nav>
-    <ul>
-      <li><a href="index.html" class="current">Home</a></li>
-      <li><a href="CV/index.html">CV</a></li>
-      <li><a href="projects/index.html">Projects</a></li>
-      <li><a href="contact/index.html">Contact</a></li>
-      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
-    </ul>
-  </nav>
 
   <p>Hi, I'm Austin. I'm trying to create my first personal/project portfolio site. Check back some time later for updates.</p>
 
@@ -26,5 +19,6 @@
        alt="Unicorn Gundam Statue in Odaiba Tokyo">
 
   <p class="caption">Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</p>
+
 </body>
 </html>
