--- a/contact/index.html
+++ b/contact/index.html
@@ -6,23 +6,13 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../CV/index.html">CV</a></li>
-      <li><a href="../projects/index.html">Projects</a></li>
-      <li><a href="../contact/index.html" class="current">Contact</a></li>
-      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
-    </ul>
-  </nav>
+  <!-- Load JS -->
+  <script type="module" src="../global.js"></script>
+  <script type="module" src="contact.js"></script>
 
   <h1>Contact</h1>
 
-  <form action="mailto:you@example.com" method="POST" enctype="text/plain">
-    <label>
-      <span>Your Email:</span>
-      <input type="email" name="email" placeholder="your@email.com" />
-    </label>
+  <form action="mailto:you@example.com" method="GET">
 
     <label>
       <span>Subject:</span>
