--- a/projects/index.html
+++ b/projects/index.html
@@ -6,15 +6,8 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../CV/index.html">CV</a></li>
-      <li><a href="../projects/index.html" class="current">Projects</a></li>
-      <li><a href="../contact/index.html">Contact</a></li>
-      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
-    </ul>
-  </nav>
+  <!-- Load JS -->
+  <script type="module" src="../global.js"></script>
 
   <h1>Projects</h1>
     <p>Here's where projects will go.</p>
