Created a JSON file with our project data. Importing Project Data into the Projects Page. Displaying the First 3 Projects on the Home Page Using JavaScript. Loading data from an API.  Step 4: Update your project data

--- a/index.html
+++ b/index.html
@@ -14,11 +14,25 @@
 
   <p>Hi, I'm Austin. I'm trying to create my first personal/project portfolio site. Check back some time later for updates.</p>
 
+
+
   <img class="centered-image"
        src="images/UnicornGundamStatue.JPG"
        alt="Unicorn Gundam Statue in Odaiba Tokyo">
 
   <p class="caption">Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</p>
 
+  <div id="profile-stats">
+    <!-- GitHub stats will be inserted here dynamically -->
+  </div>
+
+  <h2>Latest Projects</h2>
+  <div class="projects">
+    <!-- Projects will be inserted here by index.js -->
+  </div>
+
+  <!-- Load the JS module -->
+  <script src="index.js" type="module" defer></script>
+  
 </body>
 </html>
